# meloid

./: .gitignore  CHANGELOG.md  CONTRIBUTORS  LICENSE  README.md  STYLE.md  meloid.cabal
app/: Attrs.hs  Cmds.hs  Handle.hs  Image.hs  Main.hs  Sys.hs  Types.hs  Utils.hs  Widgets.hs
app/Compat/: EQBridge.hs  Image.hs  Locations.hs  Markdown.hs  Software.hs  Term.hs
app/Foreign/: PipeWire.c  PipeWire.hs
app/Network/: MPD.hs
app/Types/: Actions.hs  Configs.hs  Core.hs  Dialog.hs  Focus.hs  Helpers.hs  Identity.hs  Image.hs  Model.hs  Schemas.hs
app/Types/Schemas/: Config.hs  EQConfig.hs  Element.hs  MPDConfig.hs
app/Widgets/: Common.hs  Controls.hs  Dialogs.hs  Edits.hs  Elements.hs  Focus.hs  Image.hs  Layer.hs  Lists.hs  Views.hs
app/Widgets/Elements/: Common.hs  Element.hs  Header.hs  Scaffold.hs
app/Widgets/Visual/: EQ.hs  Spectrum.hs
assets/: config.schema.yaml  default-config.yaml  default-eq.txt
assets/docs/: welcome.md
tools/: package.json  update_config_yaml.mjs
