cabal-version:      3.0

name:               meloid

-- PVP summary:     +-+------- breaking API changes
--                  | | +----- non-breaking API additions
--                  | | | +--- code changes with no API change
version:            0.1.0.0

synopsis:           A beautiful TUI music player
-- description:
license:            MIT
license-file:       LICENSE
author:             Dexer Matters
maintainer:         dexermatters@gmail.com
category:           Sound
build-type:         Simple
extra-doc-files:    
  CHANGELOG.md
  README.md

extra-source-files:
  assets/config.schema.yaml
  assets/default-config.yaml
  assets/default-eq.txt
  assets/docs/welcome.md

data-files:
  tools/package.json
  tools/update_config_yaml.mjs

common warnings
  ghc-options: -Wall

executable meloid
  import:           warnings
  ghc-options:      -threaded
  main-is:          Main.hs
  other-modules:
    Attrs
    Utils
    Sys
    Cmd
    Types
    Types.Identity
    Types.Core
    Types.Focus
    Types.Dialog
    Types.Image
    Types.Model
    Types.Schemas
    Types.Schemas.Config
    Types.Schemas.EQConfig
    Types.Schemas.Element
    Types.Helpers
    Types.Actions
    Types.Logging
    Types.Configs
    Handle
    Widgets
    Widgets.Common
    Widgets.Focus
    Widgets.Elements
    Widgets.Elements.Common
    Widgets.Elements.Element
    Widgets.Elements.Header
    Widgets.Elements.Scaffold
    Widgets.Layer
    Widgets.Lists
    Widgets.Controls
    Widgets.Dialogs
    Widgets.Views
    Widgets.Edits
    Widgets.Image
    Widgets.Visual.EQ
    Widgets.Visual.Spectrum
    Compat.Image
    Compat.Term
    Compat.Ansi
    Compat.EQBridge
    Compat.Software
    Compat.Markdown
    Foreign.PipeWire
    Network.MPD

    Paths_meloid

  -- other-extensions:
  build-depends:    
    base >=4.20.1.0, 
    mtl,
    containers,
    directory,
    filepath,
    process,
    transformers,
    template-haskell,
    unix,

    -- Terminal UI packages
    brick,
    vty,
    text-zipper,
    text,

    -- Lens packages
    microlens-th,
    microlens-mtl,
    microlens,

    -- Media packages
    libmpd,
    network,

    -- Misc
    raw-strings-qq,
    time,
    stm,
    utf8-string,
    bytestring,
    binary,
    vector,
    vector-algorithms,
    vty-crossplatform,

    -- Parsers
    cmark,
    aeson,
    yaml,
    megaparsec,
    scientific

  hs-source-dirs:   app
  c-sources:        app/Foreign/PipeWire.c
  include-dirs:     app/Foreign
  pkgconfig-depends: libpipewire-0.3
  extra-libraries:  m
  default-language: GHC2024
